Update Jupyter Lesson_04

--- a/JupyterNotebooks/Exercises_04.ipynb
+++ b/JupyterNotebooks/Exercises_04.ipynb
@@ -377,6 +377,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Questa simulazione è stata realizzata con $50$ blocchi ciascuno da $2000$ step. Si può notare che, coerentemente con la definizione di *ensemble* microcanonico, l'energia media per particella è praticamente costante. Le fluttuazioni che si vedono all'inizio della simulazione (di questa e delle seguenti) sono provocate dalla poca precisione (rispetto all'algoritmo di Verlet) delle velocità contenute nel file `velocity.out` generato dalla fase di equilibrazione."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 298,
    "metadata": {},
@@ -430,6 +437,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Anche in questo caso si sono utilizzati $50$ step da $2000$ passi ciascuno. Si può vedere anche ad occhio come questa configurazione sia più stabile rispetto a alla fase liquida."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 314,
    "metadata": {},
@@ -480,6 +494,13 @@
     "    axes[j][k].yaxis.set_label_coords(-0.1,0.5)\n",
     "    k += 1\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Per i problemi già esposti, la simulazione per la fase gassosa ha richiesto più tempo, perchè l'ho realizzata con $50$ da $10^4$ step. Come si può notare, il sistema è lento a rispondere alle variazioni di energia cinetica, infatti si possono vendere delle grosse oscillazioni, probabilmente provocate dalle rare interazioni."
    ]
   },
   {
