--- a/JupyterNotebooks/Exercises_05.ipynb
+++ b/JupyterNotebooks/Exercises_05.ipynb
@@ -363,7 +363,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "sim_num",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -377,9 +377,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
-  },
-  "orig_nbformat": 4
+   "version": "3.9.13"
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
