--- a/JupyterNotebooks/Exercises_11/Exercise_11.1.ipynb
+++ b/JupyterNotebooks/Exercises_11/Exercise_11.1.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Esercitazione 11"
+    "# Esercitazione 11  - Esercizio 11.1"
    ]
   },
   {
