--- a/JupyterNotebooks/Exercises_11/Exercise_11.2.ipynb
+++ b/JupyterNotebooks/Exercises_11/Exercise_11.2.ipynb
@@ -9,6 +9,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4696d255",
+   "metadata": {},
+   "source": [
+    "# Esercitazione 11 - Esercizio 11.2"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "abb41637",
