--- a/JupyterNotebooks/Exercises_11/Exercise_11.3.ipynb
+++ b/JupyterNotebooks/Exercises_11/Exercise_11.3.ipynb
@@ -9,6 +9,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0c68d624",
+   "metadata": {},
+   "source": [
+    "# Esercitazione 11 - Esercizio 11.3"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "aa87112c",
