--- a/JupyterNotebooks/Exercises_04.ipynb
+++ b/JupyterNotebooks/Exercises_04.ipynb
@@ -146,7 +146,7 @@
    "metadata": {},
    "source": [
     "#### <span id=\"sim\"> Commenti sulla simulazione e sul codice </span> \n",
-    "Per questa esercitazione è stato fornito un codice procedurale che permette di simulare l'evoluzione dinamica di un sistema di $N=108$ particelle utilizzando l'algorimo di Verlet. Questo codice permette di misurare l'energia totale per particella $\\frac{E}{N}$, l'energia potenziale per particella $\\frac{U}{N}$, l'energia cinetica per particella $\\frac{K}{N}$ e la temperatura $T$ del sistema. Inoltre il codice consente di salvare le posizione delle particelle in alcuni file, in modo da poter visualizzare il movimento delle particelle utilizzando software specializzare come `Ovito`. \n",
+    "Per questa esercitazione è stato fornito un codice procedurale che permette di simulare l'evoluzione dinamica di un sistema di $N=108$ particelle utilizzando l'algorimo di Verlet. Questo codice permette di misurare l'energia totale per particella $\\frac{E}{N}$, l'energia potenziale per particella $\\frac{U}{N}$, l'energia cinetica per particella $\\frac{K}{N}$ e la temperatura $T$ del sistema. Inoltre il codice consente di salvare le posizione delle particelle in alcuni file, in modo da poter visualizzare il movimento delle particelle utilizzando software specializzati come `Ovito`. \n",
     "\n",
     "Al contrario di tutte le simulazione fino ad ora utilizzate, i parametri vengono settati da file di input esterni, situati nella cartella `input-output`.\n",
     "In particolare, dal file di input è possibile inizializzare le seguenti varibili:\n",
