--- a/JupyterNotebooks/Exercises_04.ipynb
+++ b/JupyterNotebooks/Exercises_04.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
     "\n",
     "In fisica statistica, l'*ensemble* è un concetto fondamentale che rappresenta un insieme di sistemi fisici che condividono le stesse proprietà macroscopiche, ovvero le proprietà termodinamiche che caratterizzano lo stato di equilibrio del sistema.\n",
     "\n",
-    "Ogni *ensemble* descrive uno stato termodinamico specifico del sistema, e consente di calcolare le proprietà termodinamiche del sistema a partire dalle proprietà microscopiche dei singoli atomi o molecole. In particolare, l'*ensemble* microcanonico descrive un insieme di sistemi fisici che condividono la stessa energia totale, il volume e il numero di particelle. L'*ensemble* microcanonico rappresenta quindi una descrizione di un sistema termodinamico isolato, in cui l'energia totale è costante e il numero di particelle e il volume sono fissi. In questo tipo di *ensemble*, ogni microstato del sistema fisico ha la stessa probabilità di essere osservato, poiché tutti i microstati sono equiprobabili e il sistema è isolato, ovvero non scambia energia, materia o lavoro con l'esterno.\n",
+    "Ogni *ensemble* descrive uno stato termodinamico specifico del sistema, e consente di calcolarne le proprietà termodinamiche a partire dalle proprietà microscopiche dei singoli atomi o molecole. In particolare, l'*ensemble* microcanonico descrive un insieme di sistemi fisici che condividono la stessa energia totale, il volume e il numero di particelle. L'*ensemble* microcanonico rappresenta quindi una descrizione di un sistema termodinamico isolato, in cui l'energia totale è costante e il numero di particelle e il volume sono fissi. In questo tipo di *ensemble*, ogni microstato del sistema fisico ha la stessa probabilità di essere osservato, poiché tutti i microstati sono equiprobabili e il sistema è isolato, ovvero non scambia energia, materia o lavoro con l'esterno.\n",
     "\n",
     "Questa proprietà deriva dal fatto che, in un sistema all'equilibrio termodinamico, il sistema tende a distribuirsi in modo uniforme tra tutti i microstati possibili compatibili con le condizioni imposte dall'*ensemble* microcanonico. In altre parole, il sistema esplora tutte le possibili configurazioni microscopiche compatibili con le restrizioni imposte dall'*ensemble*, e la probabilità di trovare il sistema in una particolare configurazione è proporzionale al numero di microstati che corrispondono a quella configurazione.\n",
     "\n",
@@ -125,7 +125,7 @@
     "\\vec r(t+\\delta t) \\approx 2\\vec r(t) -\\vec r(t-\\delta t) + \\delta t^2 \\vec a(t),\n",
     "$$\n",
     "\n",
-    "con $\\vec a$ è l'accelerazione. L'algoritmo per funzionare correttamente ha bisogno di informazioni relative a due istanti distinti, per questo motivo, il programma, in fase di inizializzazione, a seconda del valore del parametro `restart` (per maggiori dettagli si veda il paragrafo [Commenti sulla simulazione e sul codice](#sim)), è in grado di partire da una configurazione specificata dall'utente oppure aggirare il problema generando stocasticamente le velocità secondo una distribuzione Gaussiana e, per le particelle, utilizzando una configurazione di cristallo.\n",
+    "con $\\vec a$ accelerazione. L'algoritmo, per funzionare correttamente, ha bisogno di informazioni relative a due istanti distinti, per questo motivo, il programma, in fase di inizializzazione, a seconda del valore del parametro `restart` (per maggiori dettagli si veda il paragrafo [Commenti sulla simulazione e sul codice](#sim)), è in grado di partire da una configurazione specificata dall'utente oppure aggirare il problema generando stocasticamente le velocità secondo una distribuzione Gaussiana e, per le particelle, utilizzando una configurazione di cristallo, salvata nel file esterno `input-oputput/eq/config.in`.\n",
     "\n",
     "L'algoritmo di Verlet presenta diverse proprietà che lo rendono una scelta popolare nella simulazione di sistemi fisici. In particolare:\n",
     "\n",
@@ -146,7 +146,7 @@
    "metadata": {},
    "source": [
     "#### <span id=\"sim\"> Commenti sulla simulazione e sul codice </span> \n",
-    "Per questa esercitazione è stato fornito un codice procedurale che permette di simulare l'evoluzione dinamica di un sistema di $N=108$ particelle utilizzando l'algorimo di Verlet. Questo codice permette di misurare l'energia totale per particella $\\frac{E}{N}$, l'energia potenziale per particella $\\frac{U}{N}$, l'energia cinetica per particella $\\frac{K}{N}$ e la temperatura $T$ del sistema. Inoltre il codice consente di salvare le posizione delle particelle in alcuni file, in modo da poter visualizzare il movimento delle particelle utilizzando software specializzati come `Ovito`. \n",
+    "Per questa esercitazione è stato fornito un codice procedurale che permette di simulare l'evoluzione dinamica di un sistema di $N=108$ particelle utilizzando l'algorimo di Verlet. Questo codice permette di misurare l'energia totale per particella $\\frac{E}{N}$, l'energia potenziale per particella $\\frac{U}{N}$, l'energia cinetica per particella $\\frac{K}{N}$ e la temperatura $T$ del sistema. Inoltre, il codice consente di salvare le posizione delle particelle in alcuni file, in modo da poter visualizzare il movimento delle particelle utilizzando software specializzati come `Ovito`. \n",
     "\n",
     "Al contrario di tutte le simulazione fino ad ora utilizzate, i parametri vengono settati da file di input esterni, situati nella cartella `input-output`.\n",
     "In particolare, dal file di input è possibile inizializzare le seguenti varibili:\n",
@@ -160,7 +160,22 @@
     "- `nblk`: numero di blocchi.\n",
     "- `nstep`: numero di step per blocco.\n",
     "\n",
-    "Il programma implementa una funzione `Delete_old_files()` che elimina tutti i files generati dalle simulazioni precedenti, in modo da non mischiare i dati delle varie simulazioni."
+    "Il programma implementa una funzione `Delete_old_files()` che elimina tutti i files generati dalle simulazioni precedenti, in modo da non mischiare i dati delle varie simulazioni. All'avvio del programma si richiede se si desidera procedere con la cancellazione dei file. \n",
+    "\n",
+    "Poiché per questo esericizio è prevista una fase di equilibrazione, ho separato anche a livello di codice la fase di equilibrazione da quella di simulazione. Mostro di seguito l'*usage* del programma per lanciarlo da linea di comando:\n",
+    "\n",
+    "```\n",
+    "./Exercise_04.1 <phase> <equilibration>' with <phase> = {solid, liquid, gas} and <equilibration> = {true, false}\n",
+    "```\n",
+    "Perché la fase di simulazione sia corretta, è necessario, ovviamente, aver laciato prima il programma in fase di equilibrazione. La comunicazione tra le due fasi è garantita attraverso il salvataggio dei dati in alcuni file esterni, contenuti nella cartella `input-output/eq/<phase>`. I file che vengono salvati in fase di equilibrazione vengono poi letti in input durante la simulazione. Questi file sono:\n",
+    "\n",
+    "- `input-output/eq/<phase>/config.out`: salva la configurazione delle particelle alla fine dell'equilibrazione\n",
+    "- `input-output/eq/<phase>/velocity.out`: salva le velocità delle particelle alla fine dell'equilibrazione\n",
+    "- `input-output/eq/<phase>/seed.out`: salva il punto di arrivo alla fine dell'equilibrazione nella sequenza di numeri pseudo-casuali\n",
+    "\n",
+    "Per settare i parametri in fase di equilibrazione è neccessario modificare i file `input-output/eq/<phase>/input.<phase>`, mentre per settare i parametri per la fase di simulazione si possono utilizzare i file `input-output/input.<phase>`. \n",
+    "\n",
+    "Si ricorda che siccome la compilazione avviene attraverso `CMake`, se si effettua una modifica su file di testo che non sono nella cartella di `build` è necessario eseguire prima il comando `make` da terminale per rendere effettiva la modifica anche nella cartella di `build`. Tutti i file di testo esterni necessari, infatti, sono gestiti da `CMake` come file di configurazione (si veda il file `CMakeLists.txt` nella cartella `Lesson_04`)."
    ]
   },
   {
@@ -188,13 +203,7 @@
     "[...]\n",
     "walker[iw] = 48.0/(3.0 * vol) * w + rho * walker[it];\n",
     "```\n",
-    "dove `walker[it]` è il parametro temperatura.\n",
-    "\n",
-    "\n",
-    "Ho poi, modificato il codice in modo da chiedere attraverso linea di comando quale fase eseguire e se in modalità *equilibrazione* o *simulazione*. A seconda dei vari casi il programma utilizza diversi file di input disponibili nella cartella `input-output`. Si segnala che prima di far partire il programma in modalità simulazione, è necessario aver lanciato almeno una volta il programma in fase di equilibrazione, poiché in fase di simulazione il programma prende in inputo il file `config.out` generato in output nella fase di equilibrazione.\n",
-    "```\n",
-    "Usage: './Exercise_04.1 <phase> <equilibration>' with <phase> = {solid, liquid, gas} and <equilibration> = {true, false}\n",
-    "```"
+    "dove `walker[it]` è il parametro temperatura."
    ]
   },
   {
@@ -204,16 +213,16 @@
     "#### Fase di Equilibrazione\n",
     "Come detto sopra, visto che l'algoritmo di Verlet per funzionare correttamente necessita di informazioni relative a due istanti differenti, se il parametro `restart` è impostato a $0$, il programma carica la configurazione cristallina salvata in `input-output/config.in` ed estrae le velocità secondo secondo una distribuzione di Gauss. Il programma è anche in grado di correggere un possibile errore di *drift* causato da una distribuzione non perfettamente centrata in zero.\n",
     "\n",
-    "Monitorando, però, la temperatura durante le prime fasi della simulazione, si osserva che all'inizio, partendo da una configurazione cristallina perfetta, la temperatura non conserva il suo valore. Infatti, c'è bisogno di un certo tempo di rilassamento per permettere al sistema di stabilizzatsi e raggiungere la fase termodinamica desiderata. Per esempio, per la fase liquida, quando il sistema parte dalla configurazione fcc, ha un'energia potenziale bassa, ma dal momento che il sistema scioglierà per simulare la fase liquda, inevitabilmente l'energia potenziale aumenterà e, a causa del principio di conservazione dell'energia intrinseco all'algoritmo di Verlet, l'energia cinetica diminuità, e quindi anche la temperatura, che è collegata per solo una costante all'energia cinetica, diminuirà. In maniera analoga questo meccanismo è visibile anche per la fase gassosa e solida, e si verifica fintantochè il sistema non si è rilassato. A seconda della fase specifica, però, il tempo di rilassamento può essere più o meno lungo.\n",
+    "Monitorando, però, la temperatura durante le prime fasi della simulazione, si osserva che all'inizio, partendo da una configurazione cristallina perfetta, la temperatura non conserva il suo valore. Infatti, c'è bisogno di un certo tempo di rilassamento per permettere al sistema di stabilizzatsi e raggiungere la fase termodinamica desiderata. Per esempio, per la fase liquida, quando il sistema parte dalla configurazione fcc, questo ha un'energia potenziale bassa, ma dal momento che il sistema scioglierà per simulare la fase liquda, inevitabilmente l'energia potenziale aumenterà e, a causa del principio di conservazione dell'energia intrinseco all'algoritmo di Verlet, l'energia cinetica diminuità, e quindi anche la temperatura, che è collegata per solo una costante all'energia cinetica, diminuirà. In maniera analoga questo meccanismo è visibile anche per la fase gassosa e solida, e si verifica fintantochè il sistema non si è rilassato. A seconda della fase specifica, però, il tempo di rilassamento può essere più o meno lungo.\n",
     "\n",
-    "Per trovare il valore corretto di $T^{\\star}_{start}$ si sono lanciate varie simulazione con numero di blocchi e steps uguali a seconda della fase e $T^{\\star}_{start}$ differenti. Per la fase solida e liquida si sono utilizzati $100$ blocchi da $500$ steps, mentre per la fase gassosa è stato necessario utilizzare $200$ blocchi da $1000$ passi l'uno. L'ulizzo di un così alto numero di steps è giustificato dal fatto che il gas è rarefatto, e quindi le interazioni tra le particelle sono più rare e il sistema è più lento ad evolvere a causa della redistribuzione di energia cinetica.\n",
+    "Per trovare il valore corretto di $T^{\\star}_{start}$ lancio varie simulazione con numero di blocchi e steps uguali a seconda della fase e $T^{\\star}_{start}$ differenti. Per la fase solida e liquida si sono utilizzati $100$ blocchi da $500$ steps, mentre per la fase gassosa è stato necessario utilizzare $200$ blocchi da $1000$ passi l'uno. L'ulizzo di un così alto numero di steps è giustificato dal fatto che il gas è rarefatto, e quindi le interazioni tra le particelle sono più rare e il sistema è più lento ad evolvere a causa della redistribuzione di energia cinetica.\n",
     "\n",
     "Si riportano di seguito alcuni grafici che mostrano il lavoro svolto per la fase di equilibrazione."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 297,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -382,12 +391,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Questa simulazione è stata realizzata con $50$ blocchi ciascuno da $2000$ step. Si può notare che, coerentemente con la definizione di *ensemble* microcanonico, l'energia media per particella è praticamente costante. Le fluttuazioni che si vedono all'inizio della simulazione (di questa e delle seguenti) sono provocate dalla poca precisione (rispetto all'algoritmo di Verlet) delle velocità contenute nel file `velocity.out` generato dalla fase di equilibrazione."
+    "Questa simulazione è stata realizzata con $50$ blocchi ciascuno da $2000$ steps. Si può notare che, coerentemente con la definizione di *ensemble* microcanonico, l'energia media per particella è praticamente costante. Le fluttuazioni che si vedono all'inizio della simulazione (di questa e delle seguenti) sono provocate dalla poca precisione (rispetto all'algoritmo di Verlet) delle velocità contenute nel file `velocity.out` generato dalla fase di equilibrazione."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 298,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -442,12 +451,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Anche in questo caso si sono utilizzati $50$ step da $2000$ passi ciascuno. Si può vedere anche ad occhio come questa configurazione sia più stabile rispetto a alla fase liquida."
+    "Anche in questo caso si sono utilizzati $50$ blocchi da $2000$ passi ciascuno. Si può vedere anche ad occhio come questa configurazione sia più stabile rispetto a alla fase liquida."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 314,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -502,15 +511,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Per i problemi già esposti, la simulazione per la fase gassosa ha richiesto più tempo, perchè l'ho realizzata con $50$ da $10^4$ step. Come si può notare, il sistema è lento a rispondere alle variazioni di energia cinetica, infatti si possono vendere delle grosse oscillazioni, probabilmente provocate dalle rare interazioni."
+    "Per i problemi già esposti, la simulazione per la fase gassosa ha richiesto più tempo, perchè l'ho realizzata con $50$ blocchi da $10^4$ steps ciascuno. Come si può notare, il sistema è lento a rispondere alle variazioni di energia cinetica, infatti si possono vendere delle grosse oscillazioni, probabilmente provocate dalle rare interazioni.\n",
+    "\n",
+    "#### Osservazioni generali\n",
+    "\n",
+    "In tutti e tre i casi, osservo che temperatura ed energia cinetica sono proporzionali tra loro, coerentemente con le definizioni di queste grandezze, mentre la pressione risulta avere un andamento intermedio tra energia potenziale e temperatura, coerentemente con la legge che la definisce."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
