--- a/JupyterNotebooks/Exercises_04.ipynb
+++ b/JupyterNotebooks/Exercises_04.ipynb
@@ -514,8 +514,7 @@
     "Per i problemi già esposti, la simulazione per la fase gassosa ha richiesto più tempo, perchè l'ho realizzata con $50$ blocchi da $10^4$ steps ciascuno. Come si può notare, il sistema è lento a rispondere alle variazioni di energia cinetica, infatti si possono vendere delle grosse oscillazioni, probabilmente provocate dalle rare interazioni.\n",
     "\n",
     "#### Osservazioni generali\n",
-    "\n",
-    "In tutti e tre i casi, osservo che temperatura ed energia cinetica sono proporzionali tra loro, coerentemente con le definizioni di queste grandezze, mentre la pressione risulta avere un andamento intermedio tra energia potenziale e temperatura, coerentemente con la legge che la definisce."
+    "Per tutte e tre le fasi simulate si può notare che la scala di variazione dell'energia totale è molto piccola,  per cui si può asserire con ragionevole certezza che il codice scritto è funzionante. Inoltre, per tutti e tre i casi, osservo che temperatura ed energia cinetica sono proporzionali tra loro, coerentemente con le definizioni di queste grandezze, mentre la pressione risulta avere un andamento intermedio tra energia potenziale e temperatura, coerentemente con la legge che la definisce."
    ]
   }
  ],
